# SEARCH_AF_detection_OsloMet_BachelorGroup

./: .gitignore  LICENSE  README.md  data_handling.ipynb  ecg_data_loader.py  ecg_data_preprocessor.py  ecg_preprocessing_cli.ipynb  main.ipynb  main_2.ipynb  prev_main.ipynb  prev_main_unet.ipynb  pyproject.toml  requirements.txt
ecg_afib_detection/: all_results.csv  all_results.xlsx  leakage_check.ipynb  loader.py  run_all.sh  run_train.ipynb  train.py
ecg_afib_detection/checkpoints/ecg-arrhythmia/100hz/cnn1d/: test_results.txt
ecg_afib_detection/checkpoints/ecg-arrhythmia/100hz/resnet1d/: confusion_matrix_test.csv  test_results.txt
ecg_afib_detection/checkpoints/ecg-arrhythmia/250hz/cnn1d/: confusion_matrix_test.csv  test_results.txt
ecg_afib_detection/checkpoints/ecg-arrhythmia/250hz/resnet1d/: confusion_matrix_test.csv  test_results.txt
ecg_afib_detection/checkpoints/ecg-arrhythmia/500hz/cnn1d/: test_results.txt  (+1 more)
ecg_afib_detection/ecg_preprocessing/: ecg_data_prepare.py  ecg_data_preprocessor.py  ecg_dataset_preparation_guide.ipynb
ecg_afib_detection/models/: cnn1d.py  resnet1d.py
ecg_preprocessing/: ecg_data_preprocessor.py  ecg_preprocessing_cli.ipynb
models/: ecg_1dcnn_afib_balanced.pth
models_2/: ecg_1dcnn_afib_balanced.pth
results/: afib_detector_results_20251212_195616.txt  results_1D-CNN_2025-12-16_10-22-46.txt  results_1D-CNN_2025-12-16_11-15-27.txt
src/: data_handling.ipynb  main_unet.ipynb
src/models/: ecg_1dunet_afib_balanced.pth
src/results/: results_1D-UNET_2025-12-16_10-25-21.txt  results_1D-UNET_2025-12-16_11-43-59.txt
(+295 files in other folders)
